--- a/thesis.tex
+++ b/thesis.tex
@@ -39,7 +39,7 @@
 % The author should also be all caps
 \author{EBELECHUKWU NWAFOR}
 % Uncomment to put degrees on title page
-\AuthorDegrees{M.Sc.}
+\AuthorDegrees{M.S.}
 \date{FEB 2016}
 \DeptName{Department of Electrical Engineering and Computer Science}
 
