--- a/chapter3.tex
+++ b/chapter3.tex
@@ -82,16 +82,16 @@ In this section, we show how components of our system and describe how provenanc
 \begin{figure}[b]
 \begin{center}
 
-\includegraphics[width =3.0in]{architecture.PNG}    
+\includegraphics[width =3.0in]{system_architecture.PNG}    
 \end{center}
-\caption{System Architecture for Provenance Model.}
+\caption{System Architecture for Provenance Collection.}
 \label{architecture}
 \end{figure}
 
 Our goal is to create a provenance-aware system which records I/O operations on data for devices connected in an IoT system. For our implementation, several tools and hardware components are utilized in the development of our prototype, outlined below:
 
 \begin{itemize}
-\item BeagleBone Black Board. This device is a microcontroller used to evaluate our approach. We choose the BeagleBone Board because it is a representation of what can be found on an IoT gateway device and it has the capability to include custom hardware in programmable logic. Also, BeagleBone is a low cost, simple IoT demonstrator that was chosen for its high performance, on­board emulation, and IoT gateway projects can be programmed without additional need for hardware tools.
+\item Raspberry Pi the microcontroller used to evaluate our approach. We choose Raspberry Pi because it is a representation of what can be found on an IoT gateway device and it has the capability to include custom hardware in programmable logic. Also, Raspberry Pi is a low cost, simple IoT demonstrator that was chosen for its high performance, on­board emulation, and IoT gateway projects can be programmed without additional need for hardware tools.
 
 %\item Real Time Executive for Multiprocessor Systems (RTEMS) is an open source real­time operating system (RTOS) for embedded systems. This operating system is a typical RTOS that may be deployed in IoT devices.
 
