--- a/thesis.tex
+++ b/thesis.tex
@@ -29,7 +29,7 @@
 % of decreasing length, giving the look of an inverted pyramid.
 
 %\title{DATA PROVENANCE FOR INTERNET OF THINGS (IOT)}
-\title{TOWARDS A PROVENANCE-AWARE INTERNET OF THINGS (IOT) SYSTEM}
+\title{DATA PROVENANCE AND THE INTERNET OF THINGS (IOT)}
 % If the title is more than one line, separate the lines with \\[1pc]
 % as shown below:
 %\title{THIS IS THE VERY FIRST LINE\\[1pc]
